<resources>
	<string name="object_name">蛮牛云视频</string>
    <string name="app_name">蛮牛云视频</string>
    <string name="object_null">"object null"</string>
   <string name="action_settings">Settings</string>
    <string name="creat_file_error">创建文件失败，请检查存储卡是否正常！</string>
    <string name="openning_stream">正在打开视频</string>
    <string name="openning_Registered">正在注册,请稍候……</string>
    <string name="openning_ReloadData">正在加载数据,请稍候……</string>
    <string name="set_pwd">操作中,请稍候……</string>
    <string name="openning_realDate">正在打开实时数据</string>
    <string name="stop_stream">关闭视频</string>
    <string name="end_stream">播放结束，关闭视频连接……</string>
    <string name="logining">"登录中,请稍候……"</string>
    <string name="netWake_mobile">"当前处于移动网络,网络不稳定请耐心等待哟……"</string>
    <string name="uploading">"上传中,请稍候……"</string>
    <string name="P2PConnect">"正在创建连接……"</string>
    <string name="reopen_stream">"正在打开视频……"</string>
    <string name="querying">"正在查询……"</string>
    <string name="Err_Error_Unknow">"操作失败!"</string>
    <string name="Device:">"设备："</string>
    <string name="Time:">"时间："</string>
    <string name="Type:">"类型："</string>
    <string name="Length:">"长度："</string>
    <string name="Success">"成功"</string>
	<string name="Err_Error">"错误"</string>
	<string name="Err_Param">"参数错误"</string>
	<string name="Err_Timeout">"操作超时"</string>
	<string name="Err_NetConnect">"网络连接不可用，请检查网络"</string>
	<string name="Err_NetSendData">"网络错误,数据发送失败"</string>
	<string name="Err_NetRecvData">"网络错误,数据接收失败"</string>
	<string name="Err_System_Tip">很抱歉,程序出现异常,即将退出！</string>
	<string name="Err_NoObject">"对象不存在"</string>
	<string name="Err_Unknow">"很抱歉,出现异常,工程师攻城中！"</string>
	<string name="Err_NewBuffer">"创建缓存失败"</string>
	<string name="Err_NoBuffer">"未创建缓存"</string>
	<string name="Err_NetSetNoBlock">"设置失败"</string>
	<string name="Err_NetSetNoDelay">"设置失败"</string>
	<string name="Err_NoConnect">"未连接"</string>
	<string name="Err_Protocol">"协议解析失败"</string>
	<string name="Err_ReadData">"读取数据失败"</string>
	<string name="Err_DataParser">"数据分析错误"</string>
	<string name="Err_OutBuffer">"超过最大缓存"</string>
	<string name="Err_OpenFile">"打开文件失败"</string>
	<string name="Err_NoRight">"没有权限"</string>
	<string name="Err_NO_USER_ID">"用户不存在"</string>
	<string name="Err_USER_NULL">"用户名或密码不能为空"</string>
	<string name="Err_USER_ERROR">"用户名或密码不正确!"</string>
	<string name="Err_USER_DISABLE">"该用户已禁用!"</string>
	<string name="Err_NO_DATA_RECORD">"用户不存在"</string>
	<string name="Err_NO_USER_NAME_TO_ID">"用户未注册"</string>
	<string name="Err_NO_USER_NAME">"用户名不存在"</string>
	<string name="Err_PASSWORD_INVALID">"密码无效"</string>
	<string name="Err_INVALID_USER_ID">"无效用户"</string>
	<string name="Err_USER_LOCKED">"用户被锁定"</string>
	<string name="Err_SESSION_EXIST">"用户已经登录"</string>
	<string name="Err_OFF_LINE">"不在线"</string>
	<string name="Err_DeviceLogin">"注册失败"</string>
	<string name="Err_Registration_Timeout">"注册超时"</string>
	<string name="Err_CONNET">"网络连接失败"</string>
	<string name="Err_UPLOAD">"上传失败!"</string>
	<string name="IN_UPLOAD">"上传中……"</string>
	<string name="SUCCESS_Operation">"操作成功!"</string>
	<string name="SUCCESS_UPLOAD">"上传成功!"</string>
	<string name="SUCCESS_COLLECT">"收藏成功!"</string>
	<string name="SUCCESS_MODIFY">"修改成功!"</string>
	<string name="SUCCESS_LOGIN">登录成功</string>
	<string name="CANCEL_COLLECT">"取消收藏!"</string>
	<string name="SUCCESS_LIKE">"点赞成功!"</string>
	<string name="SUCCESS_CANCEL">取消成功!</string>
	<string name="FAIL_CANCEL">取消失败!</string>
	<string name="CANCEL_LIKE">"取消点赞!"</string>
	<string name="GET_P_FAILURE">"获取位置信息失败"</string>
	<string name="GET_P_SUCCESS">"获取位置信息成功"</string>
	<string name="GET_C_FAILURE">"获取评论数失败"</string>
	<string name="GET_C_SUCCESS">"获取评论数成功"</string>
	<string name="cel_share">取消分享</string>
	<string name="nosdcard">未找到存储卡，无法存储照片！</string>
	<string name="delete_ask">确定删除吗?</string>
	<string name="cancelColle_ask">确定取消收藏吗?</string>
	<string name="cancelShare_ask">确定取消分享吗?</string>
	<string name="delDev_ask">确定删除设备吗?</string>
	<string name="Video_play_fail">播放失败</string>
	<string name="Video_play_stop">播放停止</string>
	<string name="Video_play_crash">用户设备关闭或网络不稳定引起播放停止</string>
	<string name="Video_record_end">"录像结束!"</string>
	<string name="Video_record_error">"录像失败!"</string>
	<string name="Video_Storage_space_err">"剩余存储空间不足!"</string>
	<string name="Video_NetWork_Err">"网络连接失败，关闭连接"</string>
	<string name="Video_NetWork_reload">"联网失败，正在重新连接"</string>
	<string name="Video_Dviece_BUSY">"设备忙!"</string>
	<string name="Video_Dviece_login">"设备不在线或系统未登录，请等待"</string>
	<string name="Video_start_gpu">"硬解码已开启，如播放异常请关闭"</string>
	<string name="Video_stop_gpu">"已关闭硬解码"</string>
	<string name="Video_err_gpu">"不支持硬解码"</string>
	<string name="Video_snap_success">"截图成功!"</string>
	<string name="checking">正在检查，请稍后……</string>
	<string name="new_version">发现新版本</string>
	<string name="file_count">文件大小:</string>
	<string name="mostnew">您当前已经是最新版本</string>
	<string name="net_tip">您正在使用使用移动网络，是否继续?</string>
	<string name="move_alert">移动报警侦测</string>
	<string name="time">时间:</string>
	<string name="from">来自:</string>
	<string name="select_all">全选</string>
	<string name="select_allno">全不选</string>
	<string name="markasread">全部标记为已读</string>
	<string name="err_tip">错误提示</string>
	<string name="fail_refresh">刷新失败,稍后再试!</string>
	<string name="request_timeout">请求超时!</string>
	<string name="exit_monitor_alert">正在采集视频不能退出……</string>
	<string name="register_success_tip">感谢您注册蛮牛云!验证码为:</string>
	<string name="register_wrongcode">验证码错误!</string>
	<string name="register_getcode">获取验证码</string>
	<string name="register_serverErr">服务异常，工程师正在努力攻城!</string>
	<string name="registerCode_in">输入验证码</string>
	<string name="register">"注  册"</string>
	<string name="smalfile_tip">文件太小，不能播放，请选择大于100KB的文件</string>
	<string name="nofile">文件不存在！</string>
	<string name="video_failopen">打开视频失败！</string>
	<string name="analog_video_no_open">设备未开通，请先开通！</string>
	<string name="choosepic_alert">请选择一张图片</string>
	<string name="del_chose_ask">要删除所选内容吗？</string>
     <string name="GW_ERRCODE_SUCESS">成功</string>
    <string name="GW_SESSION_UNLINK">设备掉线</string>
    <string name="GW_ERRCODE_UNLOGIN">设备未登录</string>
    <string name="GW_ERRCODE_LOGIN_FAILED">登录失败</string>
    <string name="GW_ERRCODE_LOGIN_TIMEOUT">登录超时</string>
    <string name="GW_ERRCODE_LOGIN_IDM_TIMEOUT">登录超时</string>
    <string name="GW_ERRCODE_IDM_INIT_FAILD">初始化失败</string>
    <string name="GW_ERRCODE_IDM_REGISTER_CONFLICT">注册冲突</string>
    <string name="GW_ERRCODE_P2P_FAILD">打开视频失败</string>
    <string name="GW_ERRCODE_P2P_UNSUPPORT_TYPE">打开设备视频受限制</string>
    <string name="GW_ERRCODE_P2P_INIT_FAILD">链接失败</string>
    <string name="GW_ERRCODE_P2P_DISCONNECT">设备掉线</string>
    <string name="GW_ERRCODE_P2P_DEST_DISCONNECT">设备不在线</string>
    <string name="GW_ERRCODE_P2P_LINK_FAILD">链接失败</string>
    <string name="GW_ERRCODE_P2P_TIMEOUT">网络超时</string>
    <string name="GW_ERRCODE_TRANS_FAILD">转发失败</string>
    <string name="GW_ERRCODE_TRANS_UNSUPPORT_TYPE">设备转发受限制</string>
    <string name="GW_ERRCODE_TRANS_INIT_FAILD">链接失败</string>
    <string name="GW_ERRCODE_TRANS_DISCONNECT">设备掉线</string>
    <string name="GW_ERRCODE_TRANS_LINK_FAILD">链接失败</string>
    <string name="GW_ERRCODE_TRANS_TIMEOUT">网络超时</string>
    <string name="GW_ERRCODE_P2P_SEND_MSG_FAILD">发送消息失败</string>
    <string name="GW_ERRCODE_P2P_SEND_MSG_DISCONNECT">设备从服务器掉线</string>
    <string name="GW_ERRCODE_P2P_SEND_DATA_FAILD">发送数据失败</string>
    <string name="GW_ERRCODE_P2P_SEND_DATA_DISCONNECT">链接不存在或者已经断开</string>
    <string name="GW_ERRCODE_ALARM_FAILD">发送警报失败</string>
    <string name="GW_ERRCODE_ALARM_WAIT">上次报警未处理完成</string>
    <string name="GW_ERRCODE_ALARM_UPLOAD_FAILD">上传报警图片失败</string>
    <string name="GW_ERRCODE_ALARM_TIMEOUT">发送报警超时</string>
    <string name="GW_ERRCODE_MEDIA_UPLOAD_FAILD">发送视频失败</string>
    <string name="GW_ERRCODE_SNAPSHOT_FAILD">发送抓图失败</string>
    <string name="GW_ERRCODE_SNAPSHOT_UPLOAD_FAILD">上传抓图失败</string>
    <string name="GW_ERRCODE_HEARTBEAT_FAILD">上传抓图失败</string>
    <string name="GW_ERRCODE_HEARTBEAT_SEND_FAILD">上传抓图失败</string>
    <string name="GW_ERRCODE_SEND_JSON_PKT_FAID">上传抓图失败</string>
    <string name="GW_ERRCODE_START_UPGRADE_FAILD">上传抓图失败</string>
    <string name="GW_ERRCODE_START_UPGRADE_WAIT">上传抓图失败</string>
 	<string name="web_refresh">刷新</string>
    <string name="web_copy_link">复制链接</string>
 	<string name="web_on_browser">在浏览器中打开</string>
 	<string name="clip_show">显示剪切板文本</string>
	<string name="not_updated_yet">暂未更新过</string>
	<string name="updated_at">上次更新于%1$s前</string>
	<string name="updated_just_now">刚刚更新</string>
	<string name="time_error">时间有问题</string>
   	<string name="server_address">http://www.mny9.com</string>
	<string name="E_SER_FAIL">当前网络不好,请稍后再试!</string>
	<string name="scan_text">将二维码放入框内,即可自动扫描</string>
 	<string name="temp_17">21&#176;c </string>
 	<string name="temp_31">30&#176;c </string>
 	<string name="base_set">基本设置</string>
 	<string name="setphoto">头像设置</string>
 	<string name="camera">拍照</string>
 	<string name="devname">设备名称</string>
 	<string name="dev_modifyname">修改名称</string>
 	<string name="sel_photo">头像</string>
 	<string name="hot_name">昵称</string>
 	<string name="pho_number">手机号码</string>
 	<string name="e_mail">邮箱</string>
 	<string name="chg_pwd">修改密码</string>
 	<string name="non_set">未设置</string>
 	<string name="non_bound">未绑定</string>
 	<string name="per_detail">个人资料</string>
 	<string name="set_push">推送配置</string>
 	<string name="flow_remaind">2G/3G/4G流量提醒</string>
 	<string name="flow_limit">流量限额</string>
 	<string name="flow_desc">3G模式下查看视频，当流量达到限额时系统会自动发出提醒，为你节省流量</string>
 	<string name="auto_desc">打开后，更方便接收报警消息</string>
 	<string name="auto_loginset">自动登录设置</string>
 	<string name="auto_login">自动登录</string>
 	<string name="pass_save">保存密码</string>
 	<string name="album">"相册"</string>
	<string name="declare_devname">不超过50个字符</string>
	<string name="phnum_putTip">输入手机号</string>
	<string name="add_dev_title">添加设备</string>
	<string name="add_dev_sn">序列号</string>
	<string name="add_dev_vn">验证码</string>
	<string name="add_dev_dw">定位中...</string>
</resources>